--- a/index.html
+++ b/index.html
@@ -19,14 +19,12 @@
     </div>
     <div class="card">
       <h2 id="product-manager--data-scientist">Product Manager & Data Scientist</h2>
-      <p>Hello! I'm Ademide, an ex-mathematician, ex-management consultant, ex-data scientist, and ex-product manager.</p>
+      <p>Hello! I'm Ademide. an ex-mathematician, ex-management consultant, ex-data scientist, and ex-product manager.</p>
+      <p>I'm an ex-mathematician, ex-management consultant, ex-data scientist, and ex-product manager.</p>
       <p>I like to build apps that use AI, sometimes for fun, sometimes for profit, always to improve lives.</p>
     </div>
     <div class="card">
-      <button>This is a button</button>
-    </div>
-    <div class="card">
-      <h3>Social Media Links</h3>
+      <h3>Follow me</h3>
       <ul class="list-inline">
         <li>
           <a href="https://www.linkedin.com/in/ademideajayi/"  target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
