added smiley face

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="card">
       <h2 id="product-manager--data-scientist">Product Manager & Data Scientist</h2>
-      <p>Hello! I'm Ademide. an ex-mathematician, ex-management consultant, ex-data scientist, and ex-product manager.</p>
+      <p>Hello! I'm Ademide <i class="fas fa-smile"></i></p>
       <p>I'm an ex-mathematician, ex-management consultant, ex-data scientist, and ex-product manager.</p>
       <p>I like to build apps that use AI, sometimes for fun, sometimes for profit, always to improve lives.</p>
     </div>
